[package]
name = "sha256-rs"
version = "1.0.3"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Implementation of the SHA256 hash made using Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/sha256-rs"
repository = "https://github.com/deadblackclover/sha256-rs"
keywords = ["sha2", "sha256", "hash"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
